<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comfit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
    <string name="account_text">手机号</string>
    <string name="account_input_hnit">请输入手机号</string>
    <string name="account_input_text">18392610815</string>
    
    
    <string name="verification_code">验证码</string>
    <string name="verification_input_code_text">888999</string>
    <string name="verification_input_code_hnit">请输入验证码</string>
    
    <string name="submit_login">登录</string>
    
    <string name="home">home</string>
    <string name="cry">Crying</string>
    <string name="feed">feeding</string>
    <string name="stool">stool</string>
    
</resources>

