<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_text" />

        <EditText
            android:id="@+id/account_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/login_edit_back"
            android:hint="@string/account_input_hnit"
            android:padding="5dp"
            android:text="@string/account_input_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code" />

        <EditText
            android:id="@+id/verification_code_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/login_edit_back"
            android:hint="@string/verification_input_code_hnit"
            android:padding="5dp"
            android:text="@string/verification_input_code_text" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_login_btn"
        android:onClick="submitLoginEvent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_edit_back"
        android:text="@string/submit_login" />

    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longinfo_textView"/>
    
    
</LinearLayout>