<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dim10" >

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim13"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/dim48"
            android:layout_height="@dimen/dim48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim10"
            android:gravity="center"
            android:text="@string/home"
            android:textSize="@dimen/txt28" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_stool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/ll_stool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dim13"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/dim48"
                android:layout_height="@dimen/dim48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                android:gravity="center"
                android:text="@string/stool"
                android:textSize="@dimen/txt28" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim13"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/ll_cry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_cry"
                android:layout_width="@dimen/dim48"
                android:layout_height="@dimen/dim48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                android:gravity="center"
                android:text="@string/cry"
                android:textSize="@dimen/txt28" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_feed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dim13"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/dim48"
            android:layout_height="@dimen/dim48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim10"
            android:gravity="center"
            android:text="@string/feed"
            android:textSize="@dimen/txt28" />
    </LinearLayout>

</LinearLayout>